--- a/7 - Music player/index.html
+++ b/7 - Music player/index.html
@@ -7,6 +7,25 @@
 
     <link rel="stylesheet" href="style.css" />
 
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="src/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="src/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="src/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="src/favicon/site.webmanifest" />
+
     <script async src="script.js"></script>
     <script
       src="https://kit.fontawesome.com/1eb7adce62.js"
